Version 11

--Fixed bug in family death detection being delayed by a step, which resulted
  in several unexpected behaviors (thanks Ukuko).




Version 10  Live Server Fixes

--Fixed bug where family positions in server-side-simulation house map did not
  match actual family positions in the case of robber suicide, causing house
  check-in after suicide (if family moved at all) to fail.





Version 10   2013-June-27

--Fixed so that you can't bypass the 'Download Latest Version' message by
  logging in again (thanks Colorfusion).

--Fixed to hide map encryption key from console printout.  Made key less
  guessable buy incorporating recent mouse movement data.

--Fixed to hide Tapes button after tools transfered between vault and backpack,
  so that transfers are not lost unexpectedly by jumping to view tapes (thanks
  Matrix).

--Fixed Tapes tool tip to explain that you leave house to view tapes
  (thanks Ukuko).

--Sleeping dogs (drugged) can no longer be killed with crowbars or woken with
  water or bricks.  This increases the tactical challenge of
  killing a dog with a crowbar (because crowbar plus drugged meat is no longer
  equivalent to a gun on a lone pit bull), balancing against the crowbar's
  lower price.  Drugged meat now turns pit bulls into indestructable land
  mines.

--Tool use no longer causes mobile objects to take a step.  This increases the
  tactical effect of animal positioning (because you can no longer use a tool
  on a wall to tune how far away an animal is from you---thanks Zed).  This
  also makes pit bulls behind doors harder to deal with (opening a door with a
  crowbar no longer brings the pit bull immediately into range for a second
  crowbar).

--Client no longer crashes when it receives a corrupted house map (instead, it
  shows a house filled with exterior walls).

--Escaped family members now return to house after robber suicide instead of
  leaving for good (thanks Largestherb).
